Update docu swagger
